--- a/src/boatprototype/Admin.form
+++ b/src/boatprototype/Admin.form
@@ -24,31 +24,32 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="memberReport" alignment="0" max="32767" attributes="0"/>
-                      <Component id="boatAdminBtn" alignment="0" max="32767" attributes="0"/>
-                      <Component id="boatParkReportBtn" max="32767" attributes="0"/>
-                      <Component id="memberAdminBtn" alignment="0" max="32767" attributes="0"/>
-                  </Group>
-                  <Component id="jButton1" alignment="0" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="75" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="BoatAdminBtn" max="32767" attributes="0"/>
-                      <Component id="eventManagementBtn" alignment="1" max="32767" attributes="0"/>
-                      <Component id="boatDetailsReportBtn" alignment="1" max="32767" attributes="0"/>
-                  </Group>
-                  <Component id="lockerAdminBtn" min="-2" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                      <Component id="HomeBtn" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="memberReport" alignment="0" max="32767" attributes="0"/>
+                              <Component id="boatAdminBtn" alignment="0" max="32767" attributes="0"/>
+                              <Component id="memberAdminBtn" alignment="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Component id="jButton1" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="75" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="boatParkReportBtn" min="-2" max="-2" attributes="0"/>
+                          <Component id="BoatAdminBtn" min="-2" max="-2" attributes="0"/>
+                          <Component id="lockerAdminBtn" min="-2" max="-2" attributes="0"/>
+                          <Component id="HomeBtn" min="-2" pref="129" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Component id="boatDetailsReportBtn" min="-2" pref="140" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -56,31 +57,32 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="BoatAdminBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="memberAdminBtn" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                          <Component id="lockerAdminBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="86" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="memberReport" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="BoatAdminBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="boatDetailsReportBtn" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="lockerAdminBtn" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="eventManagementBtn" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="memberReport" min="-2" pref="34" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="boatAdminBtn" min="-2" pref="35" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="boatParkReportBtn" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="boatAdminBtn" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                          <Component id="boatParkReportBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                  <Component id="HomeBtn" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="boatDetailsReportBtn" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="HomeBtn" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
+                  <Component id="jButton1" alignment="3" pref="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -126,17 +128,9 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boatParkReportBtnActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="eventManagementBtn">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Event Management"/>
-        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[129, 35]"/>
-        </Property>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="BoatAdminBtn">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Boat Space Admin"/>
+        <Property name="text" type="java.lang.String" value="Boat Park Admin"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[129, 35]"/>
         </Property>
@@ -163,6 +157,9 @@
           <Dimension value="[129, 35]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="lockerAdminBtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="HomeBtn">
       <Properties>
