--- a/src/boatprototype/Admin.form
+++ b/src/boatprototype/Admin.form
@@ -30,16 +30,16 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="memberReport" alignment="0" max="32767" attributes="0"/>
+                              <Component id="memberReportBtn" alignment="0" max="32767" attributes="0"/>
                               <Component id="boatAdminBtn" alignment="0" max="32767" attributes="0"/>
                               <Component id="memberAdminBtn" alignment="0" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="jButton1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="eventsBtn" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="75" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="boatParkReportBtn" min="-2" max="-2" attributes="0"/>
-                          <Component id="BoatAdminBtn" min="-2" max="-2" attributes="0"/>
+                          <Component id="boatParkBtn" min="-2" max="-2" attributes="0"/>
                           <Component id="lockerAdminBtn" min="-2" max="-2" attributes="0"/>
                           <Component id="HomeBtn" min="-2" pref="129" max="-2" attributes="0"/>
                       </Group>
@@ -67,8 +67,8 @@
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="memberReport" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                          <Component id="BoatAdminBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="memberReportBtn" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="boatParkBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -77,12 +77,11 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
               <Component id="boatDetailsReportBtn" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="HomeBtn" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="3" pref="0" max="32767" attributes="0"/>
+                  <Component id="eventsBtn" alignment="3" pref="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -98,7 +97,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="memberAdminBtnActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="memberReport">
+    <Component class="javax.swing.JButton" name="memberReportBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="Membership Report "/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -106,7 +105,7 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="memberReportActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="memberReportBtnActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="boatAdminBtn">
@@ -128,7 +127,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boatParkReportBtnActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="BoatAdminBtn">
+    <Component class="javax.swing.JButton" name="boatParkBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="Boat Park Admin"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -136,7 +135,7 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BoatAdminBtnActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boatParkBtnActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="boatDetailsReportBtn">
@@ -169,7 +168,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="HomeBtnActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="eventsBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="Events"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -177,7 +176,7 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="eventsBtnActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
