--- a/src/boatprototype/BoatPark.form
+++ b/src/boatprototype/BoatPark.form
@@ -175,9 +175,9 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="34">
-                <Column editable="true" title="Membership ID" type="java.lang.Object"/>
-                <Column editable="true" title="Boat ID" type="java.lang.Object"/>
-                <Column editable="true" title="Location" type="java.lang.Object"/>
+                <Column editable="false" title="Membership ID" type="java.lang.Object"/>
+                <Column editable="false" title="Boat ID" type="java.lang.Object"/>
+                <Column editable="false" title="Location" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
