--- a/src/boatprototype/MemberAdmin.form
+++ b/src/boatprototype/MemberAdmin.form
@@ -480,18 +480,18 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="12" rowCount="16">
-                <Column editable="true" title="Membership ID" type="java.lang.Object"/>
-                <Column editable="true" title="Name" type="java.lang.String"/>
-                <Column editable="true" title="DOB" type="java.lang.String"/>
-                <Column editable="true" title="Address Line 1" type="java.lang.String"/>
-                <Column editable="true" title="Address Line 2" type="java.lang.String"/>
-                <Column editable="true" title="Town" type="java.lang.String"/>
-                <Column editable="true" title="Postcode" type="java.lang.String"/>
-                <Column editable="true" title="Email" type="java.lang.String"/>
-                <Column editable="true" title="Phone Number" type="java.lang.String"/>
-                <Column editable="true" title="Occupation" type="java.lang.String"/>
-                <Column editable="true" title="Membership Type" type="java.lang.String"/>
-                <Column editable="true" title="Family ID" type="java.lang.String"/>
+                <Column editable="false" title="Membership ID" type="java.lang.Object"/>
+                <Column editable="false" title="Name" type="java.lang.String"/>
+                <Column editable="false" title="DOB" type="java.lang.String"/>
+                <Column editable="false" title="Address Line 1" type="java.lang.String"/>
+                <Column editable="false" title="Address Line 2" type="java.lang.String"/>
+                <Column editable="false" title="Town" type="java.lang.String"/>
+                <Column editable="false" title="Postcode" type="java.lang.String"/>
+                <Column editable="false" title="Email" type="java.lang.String"/>
+                <Column editable="false" title="Phone Number" type="java.lang.String"/>
+                <Column editable="false" title="Occupation" type="java.lang.String"/>
+                <Column editable="false" title="Membership Type" type="java.lang.String"/>
+                <Column editable="false" title="Family ID" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
